fix: prevent LandingPage movie posters from overlapping; add default poster to MoviePage and SeriesPage; utilize the same default poster on ContentCards; add shoutout to default poster photo provider on AboutPage

--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -1,3 +1,4 @@
 .LandingPage-poster {
 	width: 25vw;
+	max-width: 440px;
 }
